--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,7 +1,6 @@
 {
     "name": "contracts",
     "version": "0.1.0",
-    "dependencies": {},
     "main": "index.js",
     "license": "MIT",
     "devDependencies": {
@@ -12,6 +11,7 @@
         "@nomicfoundation/hardhat-toolbox": "^1.0.1",
         "@nomiclabs/hardhat-ethers": "^2.0.0",
         "@nomiclabs/hardhat-etherscan": "^3.0.0",
+        "@openzeppelin/contracts": "^4.7.2",
         "@typechain/ethers-v5": "^10.1.0",
         "@typechain/hardhat": "^6.1.2",
         "@types/chai": "^4.2.0",
@@ -22,8 +22,11 @@
         "hardhat": "^2.10.1",
         "hardhat-gas-reporter": "^1.0.8",
         "solidity-coverage": "^0.7.21",
-        "ts-node": ">=8.0.0",
+        "ts-node": "^10.9.1",
         "typechain": "^8.1.0",
         "typescript": ">=4.5.0"
+    },
+    "scripts": {
+        "test": "hardhat test"
     }
 }
