--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/styled-components": "^5.1.25",
     "antd": "^4.22.3",
     "ethers": "^5.6.9",
+    "jotai": "^1.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
