feat(f/e): iterate upload model, integrate nft storage

--- a/packages/frontend/.env.example
+++ b/packages/frontend/.env.example
@@ -1,3 +1,4 @@
 # temporary disable to eliminate ant source map generation warnings
 GENERATE_SOURCEMAP=false
 REACT_APP_INFURA_ID=ID
+REACT_APP_NFT_STORAGE_TOKEN=T0K3N
