--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,13 +11,18 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.25",
     "antd": "^4.22.3",
     "ethers": "^5.6.9",
+    "jotai": "^1.7.7",
+    "nft.storage": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
     "util": "^0.12.4",
