--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -19,6 +19,7 @@
         "@types/mocha": "^9.1.0",
         "@types/node": ">=12.0.0",
         "chai": "^4.2.0",
+        "dotenv": "^16.0.1",
         "erc721a-upgradeable": "^4.2.1",
         "ethers": "^5.4.7",
         "hardhat": "^2.10.1",
