fix monorepo packages errors

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -20,10 +20,12 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "*": ["./src/types/*"]
+      "*": [
+        "./src/types/*"
+      ]
     }
   },
   "include": [
     "./src/*"
-, "src/components/ModalUploadProof.tsx"  ]
+  ]
 }
